--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
   - "2.0.0"
+before_install:
+  - git submodule update --init --recursive
 notifications:
   email:
     recipients:
