--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "app/models/afmodels"]
 	path = app/models/afmodels
 	url = https://github.com/pulibrary/activefedora-models.git
+	branch = development
+
