--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
+
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
@@ -23,3 +24,6 @@ jetty/*
 
 # Ignore fits
 fits/*
+
+# Ingnore the database config.
+database.yml
