first pass at SrcMetadata; but broken

--- a/config/pul_store.yml
+++ b/config/pul_store.yml
@@ -2,6 +2,7 @@ defaults: &defaults
   stage_root: /tmp/pulstore-staging
   fits_download: https://fits.googlecode.com/files/fits-0.6.2.zip
   fits_dir: fits
+  voyager_datasource: http://diglib.princeton.edu/tools/v2m
 
 development:
   <<: *defaults
