project - item association working, other that dependent:

--- a/config/predicate_mappings.yml
+++ b/config/predicate_mappings.yml
@@ -49,7 +49,7 @@
     :oai_item_id: itemID
   http://projecthydra.org/ns/relations#:
     :is_governed_by: isGovernedBy
-  http://princeton.edu/pulstore/items/:
-    :is_part_of_collection: isPartOfCollection
-    :is_part_of_project: isPartOfProject
-    :project_identifier: projectIdentifier
+  http://princeton.edu/pulstore/terms/:
+    :is_part_of_collection: isPartOfCollection # subproperty of dct:isPartOf
+    :is_part_of_project: isPartOfProject # subproperty of dct:isPartOf
+    :is_part_of_series: isPartOfSeries # subproperty of dct:isPartOf
