--- a/config/predicate_mappings.yml
+++ b/config/predicate_mappings.yml
@@ -53,3 +53,4 @@
     :is_part_of_collection: isPartOfCollection # subproperty of dct:isPartOf
     :is_part_of_project: isPartOfProject # subproperty of dct:isPartOf
     :is_part_of_series: isPartOfSeries # subproperty of dct:isPartOf
+    :in_box: inBox # subproperty of dct:isPartOf
