--- a/config/pul_store.yml
+++ b/config/pul_store.yml
@@ -7,6 +7,7 @@ defaults: &defaults
   noid_template: .zdeeek # .reeddeeddk <- Sufia
   minter_statefile: /tmp/minter-state
   id_namespace: puls
+  lae_recap_code: rcpxr
 
 development:
   <<: *defaults
