trying a different db setup strategy, maybe travis will like it better

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ before_install:
 before_script:
   - cp config/travis.database.yml config/database.yml
   - mysql -e 'create database pulstore_test'
-  - bundle exec rake db:test:prepare
-  - bundle exec rake db:seed
+  - bundle exec rake db:create ENV=test
+  - bundle exec rake db:migrate ENV=test
+  - bundle exec rake db:seed ENV=test
 branches:
   only:
     - development
