Add default roles for lae

--- a/config/role_map_development.yml
+++ b/config/role_map_development.yml
@@ -10,3 +10,11 @@ patron:
   - patron1@example.com
 admin_policy_object_editor:
   - archivist1@example.com
+all_project_readers:
+  - joetest@university.edu
+all_project_writers:
+  - joetest@university.edu
+lae_project_readers:
+  - joetest@university.edu
+lae_project_writers:
+  - joetest@university.edu
