--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -9,6 +9,6 @@ test: &TEST
 production:
   user: fedoraAdmin
   password: fedoraAdmin
-  url: http://your.production.server:8080/fedora
+  url: http://localhost:8080/fedora
 cucumber:
   <<: *TEST
