--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,10 @@ fits/*
 # Ingnore the database config.
 database.yml
 
-onoid-minter-state
+noid-minter-state
 
 # ignore compiled assets and bundled gems
 public/assets
 vendor/bundle
 
+.DS_Store
