--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,11 @@ jetty/*
 # Ignore fits
 fits/*
 
-# Ignore the database and pul_store configs
+# Ignore the database and pul_store configs 
 database.yml
 pul_store.yml
+# ignore production role_map
+role_map_production.yml
 
 noid-minter-state
 
