sets timeout for fedora ingest

--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -1,14 +1,17 @@
 development:
   user: fedoraAdmin
   password: fedoraAdmin
+  timeout: 120
   url: http://127.0.0.1:8983/fedora
 test: &TEST  
   user: fedoraAdmin
   password: fedoraAdmin
+  timeout: 120
   url: <%= "http://127.0.0.1:#{ENV['TEST_JETTY_PORT'] || 8983}/fedora-test" %>
 production:
   user: fedoraAdmin
   password: changeme
+  timeout: 120
   url: http://iaminproduction.edu
 cucumber:
   <<: *TEST
